# oj-eval-codex-038-20260401024828

./: .gitignore  CMakeLists.txt
src/: main.cpp
